--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
-    background: #2d2ab7;
-    color: rgb(45, 45, 45);
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_k3uaDvMVIANKSpCy9SMrSMmd16eP6wOzlg:https://clipart-library.com/img1/1463572.jpg&usqp=CAU");
+    background-color: #cccccc;
+    background-repeat:repeat; 
+    background-size: auto;
+    color: white;
     padding: 10px;
     font-family: arial;
 }
@@ -11,16 +14,16 @@ body {
 
 /* navigation menu */
 nav {
-    background: red;
+    background: #1b4b58;
    margin: 0 auto;
    margin-bottom: 20px;
     display: flex;
     padding: 10px;
+    color:#32d16f;
 }
 h1 {
     display: flex;
     align-items: center;
-    color: white;
     flex: 1;
     margin: 0;
     font-family: 'Georgia', serif;
@@ -34,12 +37,12 @@ h1 {
 }
 a {
     text-decoration: none;
-    color: #fff;
+    color:#32d16f;
 }
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: #1b4b58;
     display: flex;
 }
 .sidebar {
@@ -60,12 +63,12 @@ main {
     padding: 8px;
 }
 h2 {
-    color:red;
+    color:#eb241d;
     margin: 0px;
     font-family: "Times New Roman", serif;
 }
-h3 {
-    color:blue;
+h3 { 
+    color:#eb241d;
     margin: 0px;
     font-family: "Times New Roman", serif;
 }
@@ -77,7 +80,7 @@ li{
 }
          /* portfolio styles */
          .content h1 {
-            color: black;
+            color:#eb241d;
         }
 
         #portfolio {
@@ -86,17 +89,17 @@ li{
         }
 
         #portfolio li {
-            background: #fff;
+            background: #1b4b58;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
         }
 
         #portfolio li:hover {
-            background: #eee;
+            background: #12333c;
         }
 
         #portfolio a {
             text-decoration: none;
-            color: #454545;
+            color: white;
         }
